etup locale for those apps which interacts with user
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>

--- a/user/app@.service
+++ b/user/app@.service
@@ -4,6 +4,7 @@ After=environment.target
 IgnoreOnIsolate=yes
 
 [Service]
+EnvironmentFile=-/etc/locale.conf
 ExecStart=/usr/bin/env %i
 
 KillMode=process
