Add proper dbus names
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>

--- a/user/notification-daemon.service
+++ b/user/notification-daemon.service
@@ -2,7 +2,9 @@
 Description=Notification Daemon
 
 [Service]
+Type=dbus
 EnvironmentFile=-/etc/locale.conf
+BusName=org.freedesktop.Notifications
 ExecStart=/usr/libexec/notification-daemon
 
 [Install]
