--- a/user/gnome-keyring.service
+++ b/user/gnome-keyring.service
@@ -3,4 +3,7 @@ Description=GNOME Keyring Daemon
 IgnoreOnIsolate=true
 
 [Service]
+Type=dbus
+BusName=org.gnome.keyring
+BusName=org.freedesktop.secrets
 ExecStart=/usr/bin/gnome-keyring-daemon --start -f
