--- a/user/notification-daemon.service
+++ b/user/notification-daemon.service
@@ -4,6 +4,7 @@ Description=Notification Daemon
 [Service]
 Type=dbus
 EnvironmentFile=-/etc/locale.conf
+Environment=DISPLAY=:0
 BusName=org.freedesktop.Notifications
 ExecStart=/usr/libexec/notification-daemon
 
