--- a/user/app@.service
+++ b/user/app@.service
@@ -4,6 +4,7 @@ IgnoreOnIsolate=yes
 
 [Service]
 EnvironmentFile=-/etc/locale.conf
+Environment=DISPLAY=:0
 ExecStart=/usr/bin/env %i
 
 KillMode=process
