--- a/user/gnome-keyring.service
+++ b/user/gnome-keyring.service
@@ -4,6 +4,8 @@ IgnoreOnIsolate=true
 
 [Service]
 Type=dbus
+EnvironmentFile=-/etc/locale.conf
+Environment=DISPLAY=:0
 BusName=org.gnome.keyring
 BusName=org.freedesktop.secrets
 ExecStart=/usr/bin/gnome-keyring-daemon --start -f
