--- a/user/xmodmap.service
+++ b/user/xmodmap.service
@@ -4,6 +4,7 @@ Description=Setup environment
 [Service]
 Type=oneshot
 RemainAfterExit=yes
+Environment=DISPLAY=:0
 # System-wide setup
 ExecStartPre=/usr/bin/xmodmap /etc/X11/Xmodmap
 # User-specific setup
