Add necessary daemons for notification-daemon
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>

--- a/user/notification-daemon.service
+++ b/user/notification-daemon.service
@@ -1,4 +1,8 @@
 [Unit]
+After=at-spi-bus-launcher.service
+Requires=at-spi-bus-launcher.service
+After=gvfsd.service
+Requires=gvfsd.service
 Description=Notification Daemon
 
 [Service]
