Apps sometimes requires DBUS socket address to run properly
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>

--- a/user/app@.service
+++ b/user/app@.service
@@ -5,6 +5,7 @@ IgnoreOnIsolate=yes
 [Service]
 EnvironmentFile=-/etc/locale.conf
 Environment=DISPLAY=:0
+Environment=DBUS_SESSION_BUS_ADDRESS=unix:path=%t/dbus/user_bus_socket
 ExecStart=/usr/bin/env %i
 
 KillMode=process
