GNOME keyring requires gcr-prompter
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>

--- a/user/gnome-keyring.service
+++ b/user/gnome-keyring.service
@@ -1,4 +1,6 @@
 [Unit]
+After=gnome-keyring-system-prompter.service
+Requires=gnome-keyring-system-prompter.service
 Description=GNOME Keyring Daemon
 IgnoreOnIsolate=true
 
