Explicitly set up gnome-keyring control directory
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>

--- a/user/gnome-keyring.service
+++ b/user/gnome-keyring.service
@@ -10,4 +10,4 @@ EnvironmentFile=-/etc/locale.conf
 Environment=DISPLAY=:0
 BusName=org.gnome.keyring
 BusName=org.freedesktop.secrets
-ExecStart=/usr/bin/gnome-keyring-daemon --start -f
+ExecStart=/usr/bin/gnome-keyring-daemon --start -f --control-directory=%t/keyring
