--- a/user/gconf.service
+++ b/user/gconf.service
@@ -5,6 +5,7 @@ Description=org.gnome.GConf
 Type=dbus
 EnvironmentFile=-/etc/locale.conf
 Environment=DISPLAY=:0
+Environment=DBUS_SESSION_BUS_ADDRESS=unix:path=%t/dbus/user_bus_socket
 BusName=org.gnome.GConf
 ExecStart=/usr/libexec/gconfd-2
 
